[package]
name = "rox2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
glam = "0.22.0"
rand = "0.8.5"


[profile.dev.package."*"]
# Set optimization level for dependencies to 3
opt-level = 3
