[package]
name = "rox2d"
version = "0.1.0"
edition = "2021"
categories = ["game-engines", "physics-engines", "physics"]
description = "A simple 2D physics engine heaviliy inspired by (the venerable) Box2D physics engine."
license = "MIT OR Apache-2.0"

[lib]
name = "rox2d"

[[example]]
name = "basic"

[dependencies]
glam = "0.22.0"
rand = "0.8.5"

[dev-dependencies]
bevy = "0.9.1"

[profile.dev.package."*"]
# Set optimization level for dependencies to 3
opt-level = 3
